--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Publish to Github Packages
+name: Kotlin build
 
 on: [push]
 
@@ -18,9 +18,3 @@ jobs:
           chmod +x ./gradlew
           ./gradlew clean
           ./gradlew build
-      - name: Publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          chmod +x ./gradlew
-          ./gradlew publish
