--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0")
     implementation 'com.auth0:java-jwt:3.9.0'
     implementation 'com.auth0:jwks-rsa:0.10.0'
+    implementation 'org.jsoup:jsoup:1.12.2'
 }
 
 compileKotlin {
