--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.auth0:jwks-rsa:0.10.0'
     implementation 'org.jsoup:jsoup:1.12.2'
     implementation 'org.whispersystems:curve25519-android:0.5.0'
+    implementation 'com.google.firebase:firebase-admin:6.12.2'
 }
 
 compileKotlin {
